--- a/wiki/cs/PartDesign_Workbench.html
+++ b/wiki/cs/PartDesign_Workbench.html
@@ -33,7 +33,7 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Pracovn&iacute; plocha PartDesign</b> poskytuje n&aacute;stroje pro modelov&aacute;n&iacute; t&#283;les. Zam&#283;&#345;uje se p&#345;edev&scaron;&iacute;m na vytv&aacute;&#345;en&iacute; mechanick&yacute;ch komponent&#367;, kter&eacute; lze vyrobit a smontovat do hotov&eacute;ho produktu. Nicm&eacute;n&#283; vytvo&#345;en&eacute; pevn&eacute; objekty lze pou&#382;&iacute;t pro jak&eacute;koli jin&eacute; &uacute;&#269;ely, jako je <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a>, <a href="../FEM_Workbench.html" title="FEM Workbench">pracovn&iacute; plocha FEM</a> nebo <a href="../CAM_Workbench.html" title="CAM Workbench">pracovn&iacute; plocha CAM</a>.
+<p><span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <b>Pracovn&iacute; plocha PartDesign</b> poskytuje n&aacute;stroje pro modelov&aacute;n&iacute; t&#283;les. Zam&#283;&#345;uje se p&#345;edev&scaron;&iacute;m na vytv&aacute;&#345;en&iacute; mechanick&yacute;ch komponent&#367;, kter&eacute; lze vyrobit a smontovat do hotov&eacute;ho produktu. Nicm&eacute;n&#283; vytvo&#345;en&eacute; pevn&eacute; objekty lze pou&#382;&iacute;t pro jak&eacute;koli jin&eacute; &uacute;&#269;ely, jako je <a href="../BIM_Workbench.html" title="BIM Workbench">pracovn&iacute; plocha BIM</a>, <a href="../FEM_Workbench.html" title="FEM Workbench">pracovn&iacute; plocha FEM</a> nebo <a href="../CAM_Workbench.html" title="CAM Workbench">pracovn&iacute; plocha CAM</a>.
 </p><p>Pracovn&iacute; plocha PartDesign pou&#382;&iacute;v&aacute; metodiku zalo&#382;enou na funkc&iacute;ch. Komponenta je reprezentov&aacute;na kontejnerem objektu Body. T&#283;lo definuje lok&aacute;ln&iacute; sou&#345;adnicov&yacute; syst&eacute;m a obsahuje kumulativn&iacute; prvky, kter&eacute; definuj&iacute; komponentu. V&#283;t&scaron;ina prvk&#367; je zalo&#382;ena na parametrick&yacute;ch n&aacute;&#269;rtc&iacute;ch a jsou bu&#271; aditivn&iacute;, nebo subtraktivn&iacute;. Nap&#345;&iacute;klad n&aacute;stroj <a href="../PartDesign_Pad.html" title="PartDesign Pad">Deska</a> p&#345;id&aacute; extrudovan&yacute; n&aacute;&#269;rt k rozv&iacute;jej&iacute;c&iacute;mu se t&#283;lesu, n&aacute;stroj <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">Kapsa</a> ode&#269;te extrudovan&yacute; n&aacute;&#269;rt. Ka&#382;d&aacute; funkce je kumulativn&iacute; a navazuje na v&yacute;sledek p&#345;edchoz&iacute;ch funkc&iacute;. Jako prvky je tak&eacute; mo&#382;n&eacute; pou&#382;&iacute;t z&aacute;kladn&iacute; tvary (<a href="../PartDesign_AdditiveCylinder.html" title="PartDesign AdditiveCylinder">V&aacute;lec</a>, <a href="../PartDesign_AdditiveSphere.html" title="PartDesign AdditiveSphere">Koule</a>, atd.) a tak&eacute; t&#283;lesa vytvo&#345;en&aacute; mimo t&#283;lo.
 </p><p>Podrobn&#283;j&scaron;&iacute; vysv&#283;tlen&iacute; tohoto procesu najdete na str&aacute;nce <a href="../Feature_editing.html" title="Feature editing">&Uacute;pravy prvk&#367;</a> a pot&eacute; se pod&iacute;vejte na str&aacute;nku <a href="../Creating_a_simple_part_with_PartDesign.html" title="Creating a simple part with PartDesign">Vytvo&#345;en&iacute; jednoduch&eacute; sou&#269;&aacute;sti pomoc&iacute; PartDesign</a> a za&#269;n&#283;te s vytv&aacute;&#345;en&iacute;m t&#283;les.
 </p><p>The <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">Pracovn&iacute; plocha Part</a> poskytuje alternativn&iacute; metodiku <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; prostorov&eacute; geometrie</a> (CSG) pro vytv&aacute;&#345;en&iacute; tvar&#367;. Podrobn&eacute; srovn&aacute;n&iacute; pracovn&iacute;ch ploch Part a PartDesign najdete v &#269;l&aacute;nku <a href="../Part_and_PartDesign.html" title="Part and PartDesign">Part a Part Design</a>.
@@ -207,12 +207,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119220715
+Cached time: 20260119221108
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.237 seconds
-Real time usage: 0.511 seconds
+CPU time usage: 0.196 seconds
+Real time usage: 0.668 seconds
 Preprocessor visited node count: 474/1000000
 Post&#8208;expand include size: 15477/2097152 bytes
 Template argument size: 5218/2097152 bytes
@@ -223,18 +223,18 @@ Unstrip post&#8208;expand size: 4429/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.442      1 -total
- 32.33%    6.609      1 Template:PartDesign_Tools_navi/cs
- 31.22%    6.382      1 Template:Userdocnavi/cs
- 24.40%    4.988      2 Template:Navigation_menu_2
- 10.90%    2.229      2 Template:Docnav
-  5.56%    1.136      1 Template:TOCright
-  5.50%    1.125      5 Template:VersionPlus
-  5.09%    1.040      1 Template:Version
-  4.63%    0.947      1 Template:MenuCommand
+100.00%   66.802      1 -total
+ 21.74%   14.525      1 Template:PartDesign_Tools_navi/cs
+ 21.55%   14.398      1 Template:Userdocnavi/cs
+ 20.11%   13.435      2 Template:Docnav
+ 12.62%    8.433      1 Template:TOCright
+  7.76%    5.183      5 Template:VersionPlus
+  6.89%    4.602      2 Template:Navigation_menu_2
+  5.95%    3.978      1 Template:Version
+  4.84%    3.236      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119220714 and revision id 1741373. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:19042-0!canonical and timestamp 20260119221107 and revision id 1741375. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
