--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -2316,13 +2316,11 @@
 </div>
 <p><br>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <div class="docnav">
-    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">TechDraw Workbench</a></div>
+    <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../TechDraw_Workbench.html" title="TechDraw Workbench">Pracovn&iacute; plocha TechDraw</a></div>
     <div><a href="../Import_Export.html" title="Import Export">Import Export</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-right.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
-</div>
 </div>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><span typeof="mw:File"><a href="../index.php?title=User_hub.png&amp;filetimestamp=20190221145008&amp;.html" class="mw-file-description"><img src="../File/User_hub.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../cs/User_hub.html" title="User hub/cs">User documentation</a>
@@ -2340,15 +2338,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119221633
+Cached time: 20260119221647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.521 seconds
-Real time usage: 1.710 seconds
-Preprocessor visited node count: 632/1000000
-Post&#8208;expand include size: 7949/2097152 bytes
-Template argument size: 2323/2097152 bytes
+CPU time usage: 0.349 seconds
+Real time usage: 0.680 seconds
+Preprocessor visited node count: 631/1000000
+Post&#8208;expand include size: 7970/2097152 bytes
+Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -2356,17 +2354,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.335      1 -total
- 35.76%    5.841      1 Template:Userdocnavi/cs
- 16.47%    2.690      2 Template:Docnav
- 14.15%    2.312      1 Template:Navigation_menu_2
- 12.27%    2.005      2 Template:FileName
- 12.19%    1.992      1 Template:KEY
- 10.57%    1.727      1 Template:Version
-  7.96%    1.300      1 Template:TOCright
+100.00%   11.786      1 -total
+ 41.82%    4.929      1 Template:Userdocnavi/cs
+ 20.12%    2.371      1 Template:Navigation_menu_2
+ 16.54%    1.950      2 Template:Docnav
+ 10.93%    1.288      2 Template:FileName
+  8.60%    1.013      1 Template:KEY
+  8.48%    0.999      1 Template:Version
+  7.80%    0.919      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221631 and revision id 1741379. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221646 and revision id 1741381. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
