--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -21,9 +21,9 @@
     <div><a href="../cs/Online_Help_Toc.html" title="Online Help Toc/cs">Index</a> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Online_Help_Toc.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></span></span></div>
 </div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
-</div>
+<p><span id="Introduction"></span>
+</p>
+<h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><a href="../External_workbenches.html" title="External workbenches">External workbenches</a> are those created by power users which haven't been integrated into the main FreeCAD source code.
 </p>
@@ -2338,12 +2338,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119221647
+Cached time: 20260119221703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.349 seconds
-Real time usage: 0.680 seconds
+CPU time usage: 0.370 seconds
+Real time usage: 0.426 seconds
 Preprocessor visited node count: 631/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
@@ -2354,17 +2354,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.786      1 -total
- 41.82%    4.929      1 Template:Userdocnavi/cs
- 20.12%    2.371      1 Template:Navigation_menu_2
- 16.54%    1.950      2 Template:Docnav
- 10.93%    1.288      2 Template:FileName
-  8.60%    1.013      1 Template:KEY
-  8.48%    0.999      1 Template:Version
-  7.80%    0.919      1 Template:TOCright
+100.00%   13.794      1 -total
+ 36.21%    4.995      1 Template:Userdocnavi/cs
+ 17.67%    2.437      2 Template:Docnav
+ 15.93%    2.198      1 Template:Navigation_menu_2
+ 10.46%    1.443      1 Template:Version
+ 10.24%    1.413      1 Template:TOCright
+ 10.13%    1.397      2 Template:FileName
+  9.03%    1.245      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221646 and revision id 1741381. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221703 and revision id 1741383. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
