--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -24,10 +24,8 @@
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><a href="../External_workbenches.html" title="External workbenches">External workbenches</a> are those created by power users which haven't been integrated into the main FreeCAD source code.
+<p><a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> jsou ty, kter&eacute; vytvo&#345;ili pokro&#269;il&iacute; u&#382;ivatel&eacute; a kter&eacute; nebyly integrov&aacute;ny do hlavn&iacute;ho zdrojov&eacute;ho k&oacute;du FreeCADu.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>These workbenches aren't supported by the core FreeCAD development team, so they aren't tested to work with every version of FreeCAD. Questions, bug reports, and improvement requests should be made directly to the authors of the workbench.
 </p>
@@ -2338,13 +2336,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119221703
+Cached time: 20260119221733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.370 seconds
-Real time usage: 0.426 seconds
-Preprocessor visited node count: 631/1000000
+CPU time usage: 0.418 seconds
+Real time usage: 1.398 seconds
+Preprocessor visited node count: 630/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2354,17 +2352,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.794      1 -total
- 36.21%    4.995      1 Template:Userdocnavi/cs
- 17.67%    2.437      2 Template:Docnav
- 15.93%    2.198      1 Template:Navigation_menu_2
- 10.46%    1.443      1 Template:Version
- 10.24%    1.413      1 Template:TOCright
- 10.13%    1.397      2 Template:FileName
-  9.03%    1.245      1 Template:KEY
+100.00%   51.509      1 -total
+ 45.68%   23.530      1 Template:Userdocnavi/cs
+ 25.93%   13.355      1 Template:Navigation_menu_2
+ 17.21%    8.864      2 Template:Docnav
+  8.92%    4.593      1 Template:TOCright
+  8.63%    4.444      2 Template:FileName
+  7.26%    3.738      1 Template:KEY
+  5.48%    2.822      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221703 and revision id 1741383. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221731 and revision id 1741385. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
