--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -26,11 +26,8 @@
 <h2><span id=".C3.9Avod"></span><span class="mw-headline" id="&Uacute;vod">&Uacute;vod</span></h2>
 <p><a href="../External_workbenches.html" title="External workbenches">Extern&iacute; pracovn&iacute; plochy</a> jsou ty, kter&eacute; vytvo&#345;ili pokro&#269;il&iacute; u&#382;ivatel&eacute; a kter&eacute; nebyly integrov&aacute;ny do hlavn&iacute;ho zdrojov&eacute;ho k&oacute;du FreeCADu.
 </p><p>Tyto pracovn&iacute; plochy nejsou podporov&aacute;ny hlavn&iacute;m v&yacute;vojov&yacute;m t&yacute;mem programu FreeCAD, tak&#382;e nejsou testov&aacute;ny pro spolupr&aacute;ci se v&scaron;emi verzemi programu FreeCAD. Dotazy, hl&aacute;&scaron;en&iacute; chyb a po&#382;adavky na vylep&scaron;en&iacute; by m&#283;ly b&yacute;t zas&iacute;l&aacute;ny p&#345;&iacute;mo autor&#367;m pracovn&iacute; plochy.
+</p><p>Pracovn&iacute; plochy ozna&#269;en&eacute; <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> lze nainstalovat z <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>. Pro manu&aacute;ln&iacute; instalaci se pod&iacute;vejte na <a href="../Installing_more_workbenches.html" title="Installing more workbenches">Instalace dal&scaron;&iacute;ch pracovn&iacute;ch ploch</a>. Pokud existuj&iacute; konkr&eacute;tn&iacute; pokyny nebo p&#345;edpoklady pro pou&#382;&iacute;v&aacute;n&iacute; extern&iacute;ho pracovn&iacute; plochy, m&#283;ly by b&yacute;t uvedeny na domovsk&eacute; str&aacute;nce pracovn&iacute; plochy.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Workbenches marked with <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> can be installed from the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. For manual installation see <a href="../Installing_more_workbenches.html" title="Installing more workbenches">Installing more workbenches</a>. If there are specific instructions or prerequisites for using an external workbench, then these should be noted on the workbench's home page.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Workbenches marked with <span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> are not recommended for recent versions of FreeCAD. They are obsolete, unmaintained, superseded by a newer workbench, or maybe they don't work with Python 3 or with Qt5. In most cases they should be avoided.
 </p>
@@ -2333,13 +2330,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119221809
+Cached time: 20260119222047
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.412 seconds
-Real time usage: 0.754 seconds
-Preprocessor visited node count: 629/1000000
+CPU time usage: 0.375 seconds
+Real time usage: 0.722 seconds
+Preprocessor visited node count: 628/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2349,17 +2346,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.995      1 -total
- 36.61%    9.517      1 Template:Userdocnavi/cs
- 19.58%    5.089      2 Template:FileName
- 14.95%    3.886      1 Template:Navigation_menu_2
- 11.05%    2.873      2 Template:Docnav
- 10.71%    2.783      1 Template:KEY
-  9.79%    2.545      1 Template:TOCright
-  9.39%    2.442      1 Template:Version
+100.00%   31.953      1 -total
+ 51.58%   16.480      1 Template:Userdocnavi/cs
+ 35.10%   11.217      1 Template:Navigation_menu_2
+ 16.04%    5.124      2 Template:FileName
+  7.94%    2.538      2 Template:Docnav
+  7.68%    2.454      1 Template:Version
+  7.37%    2.354      1 Template:TOCright
+  6.95%    2.221      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119221808 and revision id 1741387. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222046 and revision id 1741389. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
