--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -28,10 +28,9 @@
 </p><p>Tyto pracovn&iacute; plochy nejsou podporov&aacute;ny hlavn&iacute;m v&yacute;vojov&yacute;m t&yacute;mem programu FreeCAD, tak&#382;e nejsou testov&aacute;ny pro spolupr&aacute;ci se v&scaron;emi verzemi programu FreeCAD. Dotazy, hl&aacute;&scaron;en&iacute; chyb a po&#382;adavky na vylep&scaron;en&iacute; by m&#283;ly b&yacute;t zas&iacute;l&aacute;ny p&#345;&iacute;mo autor&#367;m pracovn&iacute; plochy.
 </p><p>Pracovn&iacute; plochy ozna&#269;en&eacute; <span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> lze nainstalovat z <a href="../Std_AddonMgr.html" title="Std AddonMgr">Spr&aacute;vce dopl&#328;k&#367;</a>. Pro manu&aacute;ln&iacute; instalaci se pod&iacute;vejte na <a href="../Installing_more_workbenches.html" title="Installing more workbenches">Instalace dal&scaron;&iacute;ch pracovn&iacute;ch ploch</a>. Pokud existuj&iacute; konkr&eacute;tn&iacute; pokyny nebo p&#345;edpoklady pro pou&#382;&iacute;v&aacute;n&iacute; extern&iacute;ho pracovn&iacute; plochy, m&#283;ly by b&yacute;t uvedeny na domovsk&eacute; str&aacute;nce pracovn&iacute; plochy.
 </p><p>Pracovn&iacute; plochy ozna&#269;en&eacute; <span typeof="mw:File"><a href="../index.php?title=Edit_Cancel.svg&amp;filetimestamp=20240704192407&amp;.html" class="mw-file-description"><img src="../File/Edit_Cancel.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> se pro nejnov&#283;j&scaron;&iacute; verze FreeCADu nedoporu&#269;uj&iacute;. Jsou zastaral&eacute;, neudr&#382;ovan&eacute;, nahrazen&eacute; nov&#283;j&scaron;&iacute;mi pracovn&iacute;mi plochami, nebo mo&#382;n&aacute; nefunguj&iacute; s Pythonem 3 nebo Qt5. Ve v&#283;t&scaron;in&#283; p&#345;&iacute;pad&#367; by jste se jim m&#283;li vyhnout.
+</p><p><span id="Assembly_workbenches"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Assembly_workbenches">Assembly workbenches</span></h2>
-</div>
+<h2><span id="Pracovn.C3.AD_plocha_Assembly"></span><span class="mw-headline" id="Pracovn&iacute;_plocha_Assembly">Pracovn&iacute; plocha Assembly</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>FreeCAD has a built-in <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). There are also several external assembly workbenches. These workbenches are incompatible with each other. If you create an assembly with one of them, you should stick to the original workbench, and not use another assembly workbench in the same document.
 </p>
@@ -2327,12 +2326,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119222242
+Cached time: 20260119222635
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.409 seconds
-Real time usage: 0.896 seconds
+CPU time usage: 0.361 seconds
+Real time usage: 0.720 seconds
 Preprocessor visited node count: 627/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
@@ -2343,17 +2342,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   47.078      1 -total
- 35.68%   16.797      1 Template:Userdocnavi/cs
- 22.62%   10.648      2 Template:Docnav
- 14.16%    6.666      1 Template:Navigation_menu_2
- 11.68%    5.498      1 Template:KEY
- 10.49%    4.938      2 Template:FileName
-  8.36%    3.935      1 Template:Version
-  6.00%    2.823      1 Template:TOCright
+100.00%   22.673      1 -total
+ 41.14%    9.328      1 Template:Userdocnavi/cs
+ 15.62%    3.541      1 Template:Version
+ 15.22%    3.450      2 Template:Docnav
+ 14.15%    3.209      1 Template:Navigation_menu_2
+  9.92%    2.250      1 Template:KEY
+  9.66%    2.191      2 Template:FileName
+  5.40%    1.225      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222241 and revision id 1741391. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222634 and revision id 1741393. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
