--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -31,10 +31,8 @@
 </p><p><span id="Assembly_workbenches"></span>
 </p>
 <h2><span id="Pracovn.C3.AD_plocha_Assembly"></span><span class="mw-headline" id="Pracovn&iacute;_plocha_Assembly">Pracovn&iacute; plocha Assembly</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>FreeCAD has a built-in <a href="../Assembly_Workbench.html" title="Assembly Workbench">Assembly Workbench</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). There are also several external assembly workbenches. These workbenches are incompatible with each other. If you create an assembly with one of them, you should stick to the original workbench, and not use another assembly workbench in the same document.
+<p>FreeCAD m&aacute; vestav&#283;nou <a href="../Assembly_Workbench.html" title="Assembly Workbench">pracovn&iacute; plochu Assembly</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Existuje tak&eacute; n&#283;kolik extern&iacute;ch mont&aacute;&#382;n&iacute;ch pracovn&iacute;ch ploch. Tyto pracovn&iacute; plochy nejsou vz&aacute;jemn&#283; kompatibiln&iacute;. Pokud vytvo&#345;&iacute;te sestavu s pomoc&iacute; jedn&eacute; z nich, m&#283;li byste se dr&#382;et p&#367;vodn&iacute; pracovn&iacute; plochy a nepou&#382;&iacute;vat v tomt&eacute;&#382; dokumentu jinou pracovn&iacute; plochu pro sestavy.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>There are also 'pseudo assembly' workbenches which actually don't use constraints to keep relationships between parts, but simply re-position them in space.
 </p>
@@ -2326,13 +2324,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119222635
+Cached time: 20260119222823
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.361 seconds
-Real time usage: 0.720 seconds
-Preprocessor visited node count: 627/1000000
+CPU time usage: 0.341 seconds
+Real time usage: 0.556 seconds
+Preprocessor visited node count: 626/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2342,17 +2340,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.673      1 -total
- 41.14%    9.328      1 Template:Userdocnavi/cs
- 15.62%    3.541      1 Template:Version
- 15.22%    3.450      2 Template:Docnav
- 14.15%    3.209      1 Template:Navigation_menu_2
-  9.92%    2.250      1 Template:KEY
-  9.66%    2.191      2 Template:FileName
-  5.40%    1.225      1 Template:TOCright
+100.00%   21.542      1 -total
+ 42.28%    9.107      1 Template:Userdocnavi/cs
+ 16.97%    3.656      2 Template:FileName
+ 14.08%    3.034      1 Template:Navigation_menu_2
+ 13.18%    2.839      2 Template:Docnav
+ 10.67%    2.298      1 Template:TOCright
+  7.66%    1.651      1 Template:Version
+  6.14%    1.322      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222634 and revision id 1741393. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222823 and revision id 1741395. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
