--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -33,10 +33,9 @@
 <h2><span id="Pracovn.C3.AD_plocha_Assembly"></span><span class="mw-headline" id="Pracovn&iacute;_plocha_Assembly">Pracovn&iacute; plocha Assembly</span></h2>
 <p>FreeCAD m&aacute; vestav&#283;nou <a href="../Assembly_Workbench.html" title="Assembly Workbench">pracovn&iacute; plochu Assembly</a> (<span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>). Existuje tak&eacute; n&#283;kolik extern&iacute;ch mont&aacute;&#382;n&iacute;ch pracovn&iacute;ch ploch. Tyto pracovn&iacute; plochy nejsou vz&aacute;jemn&#283; kompatibiln&iacute;. Pokud vytvo&#345;&iacute;te sestavu s pomoc&iacute; jedn&eacute; z nich, m&#283;li byste se dr&#382;et p&#367;vodn&iacute; pracovn&iacute; plochy a nepou&#382;&iacute;vat v tomt&eacute;&#382; dokumentu jinou pracovn&iacute; plochu pro sestavy.
 </p><p>Existuj&iacute; tak&eacute; &bdquo;pseudo-mont&aacute;&#382;n&iacute;&ldquo; pracovn&iacute; plochy, kter&eacute; ve skute&#269;nosti nepou&#382;&iacute;vaj&iacute; omezen&iacute; k udr&#382;en&iacute; vztah&#367; mezi sou&#269;&aacute;stmi, ale jednodu&scaron;e je p&#345;em&iacute;st&iacute; v prostoru.
+</p><p><span id="Overview"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Overview">Overview</span></h2>
-</div>
+<h2><span id="P.C5.99ehled"></span><span class="mw-headline" id="P&#345;ehled">P&#345;ehled</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The table below is organized in topics, but can be reorder by clicking any of the column headers.
 </p>
@@ -2321,12 +2320,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119222918
+Cached time: 20260119222928
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.381 seconds
-Real time usage: 0.934 seconds
+CPU time usage: 0.349 seconds
+Real time usage: 0.838 seconds
 Preprocessor visited node count: 625/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
@@ -2337,17 +2336,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.240      1 -total
- 41.79%    5.533      1 Template:Userdocnavi/cs
- 20.72%    2.744      1 Template:Navigation_menu_2
- 19.77%    2.617      2 Template:Docnav
-  9.77%    1.294      1 Template:TOCright
-  8.64%    1.144      1 Template:Version
-  8.01%    1.061      1 Template:KEY
-  7.57%    1.002      2 Template:FileName
+100.00%   20.691      1 -total
+ 42.09%    8.709      1 Template:Userdocnavi/cs
+ 20.58%    4.259      1 Template:Navigation_menu_2
+ 20.14%    4.167      2 Template:Docnav
+  8.76%    1.813      2 Template:FileName
+  8.51%    1.760      1 Template:TOCright
+  8.16%    1.688      1 Template:KEY
+  6.80%    1.407      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222917 and revision id 1741397. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222928 and revision id 1741399. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
