--- a/wiki/cs/External_workbenches.html
+++ b/wiki/cs/External_workbenches.html
@@ -36,10 +36,8 @@
 </p><p><span id="Overview"></span>
 </p>
 <h2><span id="P.C5.99ehled"></span><span class="mw-headline" id="P&#345;ehled">P&#345;ehled</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The table below is organized in topics, but can be reorder by clicking any of the column headers.
+<p>N&iacute;&#382;e uveden&aacute; tabulka je uspo&#345;&aacute;d&aacute;na podle t&eacute;mat, ale lze ji p&#345;eskupit kliknut&iacute;m na libovoln&eacute; z&aacute;hlav&iacute; sloupce.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="sortable wikitable">
 <tbody><tr>
@@ -2320,13 +2318,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119222928
+Cached time: 20260119223003
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.349 seconds
-Real time usage: 0.838 seconds
-Preprocessor visited node count: 625/1000000
+CPU time usage: 0.535 seconds
+Real time usage: 1.154 seconds
+Preprocessor visited node count: 624/1000000
 Post&#8208;expand include size: 7970/2097152 bytes
 Template argument size: 2337/2097152 bytes
 Highest expansion depth: 5/100
@@ -2336,17 +2334,17 @@ Unstrip post&#8208;expand size: 2951/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.691      1 -total
- 42.09%    8.709      1 Template:Userdocnavi/cs
- 20.58%    4.259      1 Template:Navigation_menu_2
- 20.14%    4.167      2 Template:Docnav
-  8.76%    1.813      2 Template:FileName
-  8.51%    1.760      1 Template:TOCright
-  8.16%    1.688      1 Template:KEY
-  6.80%    1.407      1 Template:Version
+100.00%   35.571      1 -total
+ 34.17%   12.153      1 Template:Userdocnavi/cs
+ 16.80%    5.977      1 Template:Navigation_menu_2
+ 15.91%    5.661      1 Template:TOCright
+ 14.04%    4.994      2 Template:Docnav
+ 11.73%    4.174      1 Template:KEY
+ 10.59%    3.768      2 Template:FileName
+ 10.20%    3.628      1 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119222928 and revision id 1741399. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411981-0!canonical and timestamp 20260119223001 and revision id 1741401. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
